apps/fastapi-eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ev-ai-inference-api
  namespace: fastapi
  labels:
    app: ev-ai-inference-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: ev-ai-inference-api
  template:
    metadata:
      labels:
        app: ev-ai-inference-api
    spec:
      containers:
        - name: api
          image: qp4534/ev-energy-management-fastapi:c6ebb611d0a32ecb6e8d0f741e14bf76876d1b40
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "1"
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 4Gi
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
