apps/fastapi-eks/scenario-replay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ev-scenario-replay
  namespace: fastapi
  labels:
    app: ev-scenario-replay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ev-scenario-replay
  template:
    metadata:
      labels:
        app: ev-scenario-replay
    spec:
      containers:
        - name: replay
          image: qp4534/ev-energy-management-fastapi:71e08bebf0bc4d0a9e1362870c12020d4a327143
          imagePullPolicy: IfNotPresent
          command: ["python", "-m", "app.scenario_replay"]
          args:
            - --s3-bucket
            - ev-platform-thermal-data
            - --s3-prefix
            - digital-twin/scenarios
            - --speed
            - "1"
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
