apps/fastapi-eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ev-ai-inference-api
  namespace: fastapi
spec:
  type: ClusterIP
  selector:
    app: ev-ai-inference-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
